# otel-opa-demo

./: .env  README.md  docker-compose.yaml  otel-collector-config.yaml
blocked-user-rs/: Cargo.toml  Dockerfile
blocked-user-rs/src/: main.rs
go-client/: go.mod  go.sum  jwt.go  main.go  tracing.go
go-server/: Dockerfile  authz.go  go.mod  go.sum  main.go  opa-client.go  tracing.go  user-handler.go
opa/: config.yaml
opa/policy/: main.rego
