[package]
name = "blocked-user-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10.0", features = ["default"] }
actix-web = "4.0.0-beta.4"
actix-service = "2.0.0-beta.5"
actix-web-opentelemetry = "0.11.0-beta.8"
tokio = { version = "1", features = ["full"] }
env_logger = "0.8.2"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }